added sending email when exceeded expenses